--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jotai": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
   },
