--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
