--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@fontsource/roboto": "^5.0.8",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.9",
+    "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.9",
+    "@mui/x-data-grid": "^6.16.0",
     "axios": "^1.5.0",
     "jotai": "^2.4.2",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
+    "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8"
   },
