--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.2",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.11",
@@ -22,13 +23,14 @@
     "jotai": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
