--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
