--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^5.14.9",
     "@mui/x-data-grid": "^6.16.0",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "jotai": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
