--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^6.16.0",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "fernet-ts": "^1.0.2",
     "jotai": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
