--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.9",
     "@mui/x-data-grid": "^6.16.0",
+    "@mui/x-date-pickers": "^6.18.4",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "jotai": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
